# dendradownloader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dendra_downloader.pyt  pyproject.toml  test.py
.github/workflows/: python-app.yml  run-unit-tests.yml
tests/: test_dendra_downloader.py
